<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pages_shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/noot"

        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="40sp" />

    <Button
        android:id="@+id/enter_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btns_shape"
        android:text="@string/enter"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btns_shape"
        app:backgroundTint="@null"
        android:text="@string/instruction"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btns_shape"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:text="@string/rate"
        android:layout_marginBottom="30dp"/>

</LinearLayout>

